tests/org.eclipse.php.core.tests/workspace/errors/php53/duplicateConstantDeclaration.pdtt
--TEST--
Test duplicated method
--FILE--
<?php
class Foo {
	const BAR = 1;
	const BAR = 2;
}
?>
--EXPECT--
[line=4, start=41, end=44] Cannot declare constant BAR because the name is already in use